--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Meu site pessoal</title>
 </head>
 <body>
     <header>
-        <img src="/270061420_2089919547825086_7499434533018871908_n.jpg" alt="Minha foto">
-        <h1>Wallace Medeiros</h1>
+        <img src="/assets/270061420_2089919547825086_7499434533018871908_n.jpg" alt="Minha foto">
+        <h1 class="titulo-principal">Wallace Medeiros</h1>
         <h3>Aluno Comeia Academy</h3>
     </header>
     <nav>
-        <a href="#">CURRICULO</a>
-        <a href="#">PORTFÓLIO</a>
-        <a href="#">CONTATO</a>
+        <ul>
+            <li class="button-li"><a href="#">CURRICULO</a></li>
+            <li class="button-li"><a href="pages/portfolio.html">PORTFÓLIO</a></li>
+            <li class="button-li"><a href="pages/contato.html">CONTATO</a></li>
+        </ul>
     </nav>
     <section>
         <h3 class="secoes">Resumo</h3>
