--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../meu-site-pessoal/css/style.css">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Meu site pessoal</title>
 </head>
 <body>
     <header>
-        <img src="../meu-site-pessoal/assets/270061420_2089919547825086_7499434533018871908_n.jpg" alt="Minha foto">
+        <img src="./assets/270061420_2089919547825086_7499434533018871908_n.jpg" alt="Minha foto">
         <h1 class="titulo-principal">Wallace Medeiros</h1>
         <h3>Aluno Comeia Academy</h3>
     </header>
